[package]
name = "lazy-list"
version = "0.1.0"
edition = "2021"
authors = ["Ewan Mount <ejmount@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/ejmount/lazy-list"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
